# mpi_lab

./: CMakeLists.txt  README.md  gify.py  how_to_run.txt  main.cpp  other.h
